--- a/frontend/luma/src/index.css
+++ b/frontend/luma/src/index.css
@@ -72,3 +72,8 @@ button:focus-visible {
 *{
   background-color: black;
 }
+.text-with-background {
+  @apply bg-gradient-to-r from-violet-800 to-red-500;
+  background-clip: text;
+  color: transparent;
+}
